[package]
name = "sieri-xf"
version = "0.1.0"
edition = "2021"
description = "An event driven multiplateform execution framework"

[dependencies]
log = "0.4.17"

[dev-dependencies]
fern = {version="0.6.1", features = ["colored"]}

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2