[package]
name = "sieri-xf"
version = "0.1.0"
edition = "2021"
description = "An event driven multiplateform execution framework"

[lib]
proc-macro = true

[dependencies]
log = "0.4.17"
syn = {version="1.0.107", features = ["full"]}
quote = "1.0.23"

[dev-dependencies]
fern = {version="0.6.1", features = ["colored"]}

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2